--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "genlm-control>=0.2.2",
+    "pytest>=8.4.1",
     "ruff>=0.12.0",
 ]
