--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "genlm-control>=0.2.2",
+    "markitdown[all]>=0.1.2",
     "pytest>=8.4.1",
     "ruff>=0.12.0",
 ]
