--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "fast-agent-mcp>=0.2.36",
     "genlm-control>=0.2.2",
     "markitdown[all]>=0.1.2",
+    "mcp[cli]>=1.10.1",
+    "openai>=1.93.0",
+    "pandas>=2.3.0",
+    "pyarrow>=20.0.0",
     "pytest>=8.4.1",
     "ruff>=0.12.0",
 ]
