bring yml files to top line

--- a/fastagent.secrets.yaml
+++ b/fastagent.secrets.yaml
@@ -5,5 +5,9 @@
 # Keys in the configuration file override environment variables.
 
 generic:
-  api_key: "ollama" # Default for Ollama, change as needed
-  base_url: "http://localhost:11434/v1" # Default for Ollama
+    api_key: "ollama" # Default for Ollama, change as needed
+    base_url: "http://localhost:11434/v1" # Default for Ollama
+
+google:
+    api_key: "AIzaSyDZwp1EEN24l1pAWYalkuxyAlz54amH1P8"
+    base_url: "https://generativelanguage.googleapis.com/v1beta/openai"
