--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,33 @@
 [project]
-name = "genlm-control-demo"
-version = "0.1.0"
+dependencies = [
+  "fast-agent-mcp>=0.2.36",
+  "markitdown[all]>=0.1.2",
+  "mcp[cli]>=1.10.1",
+  "openai>=1.93.0",
+  "pandas>=2.3.0",
+  "pyarrow>=20.0.0",
+  "pytest>=8.4.1",
+  "ruff>=0.12.0",
+]
 description = "Add your description here"
+name = "genlm-control-demo"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = [
-    "fast-agent-mcp>=0.2.36",
-    "genlm-control>=0.2.2",
-    "markitdown[all]>=0.1.2",
-    "mcp[cli]>=1.10.1",
-    "openai>=1.93.0",
-    "pandas>=2.3.0",
-    "pyarrow>=20.0.0",
-    "pytest>=8.4.1",
-    "ruff>=0.12.0",
+version = "0.1.0"
+
+[tool.ruff]
+line-length = 100
+target-version = "py311"
+
+[tool.ruff.lint]
+ignore = ["E501"]
+select = [
+  "E", # pycodestyle errors
+  "F", # pyflakes
+  "I", # isort
+  "TCH", # type checking
 ]
+
+# More lenient settings for existing code
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["ANN"] # Don't require type annotations in tests
