--- a/fastagent.config.yaml
+++ b/fastagent.config.yaml
@@ -1,28 +1,23 @@
 generic:
-    api_key: "ollama" # Default for Ollama, change as needed
-    base_url: "http://localhost:11434/v1" # Default for Ollama
+    api_key: "ollama"
+    base_url: "http://localhost:11434/v1"
 
-# set the default model for fast-agent below:
 default_model: generic.llama3.2:latest
+execution_engine: asyncio
 
-# Logging and Console Configuration:
 logger:
-    # Switched off to avoid cluttering the console
     progress_display: false
-
-    # Show chat User/Assistant messages on the console
     show_chat: true
-    # Show tool calls on the console
     show_tools: true
-    # Truncate long tool responses on the console
     truncate_tools: true
+    type: file
+    level: error
 
-# MCP Servers
 mcp:
     servers:
-        prompts:
-            command: prompt-server
-            args: ["history.json"]
-        verifier_agent:
-            transport: http
-            url: http://localhost:8001/mcp
+        filesystem:
+            command: "npx"
+            args: ["-y", "@modelcontextprotocol/server-filesystem", "."]
+        fetch:
+            command: "uvx"
+            args: ["mcp-server-fetch"]
