--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ dependencies = [
   "fast-agent-mcp>=0.2.36",
   "markitdown[all]>=0.1.2",
   "mcp[cli]>=1.10.1",
-  "openai>=1.93.0",
   "pandas>=2.3.0",
   "pyarrow>=20.0.0",
   "pytest>=8.4.1",
   "ruff>=0.12.0",
+  "vllm>=0.9.1",
 ]
 description = "Add your description here"
 name = "genlm-control-demo"
