--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 dependencies = [
   "fast-agent-mcp>=0.2.36",
+  "flashinfer-python>=0.2.7.post1",
   "markitdown[all]>=0.1.2",
   "mcp[cli]>=1.10.1",
   "pandas>=2.3.0",
