--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,16 @@
 [project]
 dependencies = [
-  "fast-agent-mcp>=0.2.36",
-  "flashinfer-python>=0.2.7.post1",
-  "markitdown[all]>=0.1.2",
-  "mcp[cli]>=1.10.1",
-  "pandas>=2.3.0",
-  "pyarrow>=20.0.0",
-  "pytest>=8.4.1",
-  "ruff>=0.12.0",
-  "vllm>=0.9.1",
+    "debugpy>=1.8.15",
+    "fast-agent-mcp>=0.2.40",
+    "flashinfer-python>=0.2.7.post1",
+    "pytest>=8.4.1",
+    "ruff>=0.12.2",
+    "vllm>=0.9.1",
 ]
 description = "Add your description here"
-name = "genlm-control-demo"
+name = "oath-keepers"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 version = "0.1.0"
 
 [tool.ruff]
