--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,20 @@
 [project]
 dependencies = [
-    "debugpy>=1.8.15",
-    "fast-agent-mcp>=0.2.40",
-    "flashinfer-python>=0.2.7.post1",
-    "pytest>=8.4.1",
-    "ruff>=0.12.2",
-    "vllm>=0.9.1",
+  "fast-agent-mcp>=0.2.35",
+  "vllm>=0.10.0",
 ]
 description = "Add your description here"
 name = "oath-keepers"
 readme = "README.md"
 requires-python = ">=3.12"
 version = "0.1.0"
+
+[project.optional-dependencies]
+dev = [
+  "debugpy>=1.8.15",
+  "pytest>=8.4.1",
+  "ruff>=0.12.2",
+]
 
 [tool.ruff]
 line-length = 100
