--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
 
             - name: Install uv
               uses: astral-sh/setup-uv@v6
+              with:
+                  activate-environment: true
 
             - name: Install dependencies
               run: uv pip install .[dev]
@@ -41,6 +43,8 @@ jobs:
 
             - name: Install uv
               uses: astral-sh/setup-uv@v6
+              with:
+                  activate-environment: true
 
             - name: Install dependencies
               run: uv pip install .[dev]
