--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,11 +48,27 @@ jobs:
                   activate-environment: true
                   enable-cache: true
 
+            - name: Install build dependencies
+              run: |
+                  sudo apt-get update -y
+                  sudo apt-get install -y --no-install-recommends ccache git curl wget ca-certificates gcc-12 g++-12 libtcmalloc-minimal4 libnuma-dev ffmpeg libsm6 libxext6 libgl1 jq lsof
+                  sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 10 --slave /usr/bin/g++ g++ /usr/bin/g++-12
+
+            - name: Build and install vLLM from source
+              run: |
+                  git clone https://github.com/vllm-project/vllm.git /tmp/vllm
+                  cd /tmp/vllm
+                  pip install --upgrade pip
+                  pip install -v -r requirements/cpu-build.txt --extra-index-url https://download.pytorch.org/whl/cpu
+                  pip install -v -r requirements/cpu.txt --extra-index-url https://download.pytorch.org/whl/cpu
+                  VLLM_TARGET_DEVICE=cpu python setup.py install
+
             - name: Install dependencies
               run: uv pip install .[dev]
 
             - name: Run tests
               run: |
+                  export LD_PRELOAD="/usr/lib/x86_64-linux-gnu/libtcmalloc_minimal.so.4:$LD_PRELOAD"
                   python oath_keepers/vllm_server.py --model tiny-random/gemma-3 &
                   while ! nc -z localhost 8000; do sleep 1; done
                   uv run pytest
