--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,11 +48,9 @@ jobs:
                   activate-environment: true
                   enable-cache: true
 
-            # - name: Install build dependencies
-            #   run: |
-            #       sudo apt-get update -y
-            #       sudo apt-get install -y --no-install-recommends ccache git curl wget ca-certificates gcc-12 g++-12 libtcmalloc-minimal4 libnuma-dev ffmpeg libsm6 libxext6 libgl1 jq lsof
-            #       sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 10 --slave /usr/bin/g++ g++ /usr/bin/g++-12
+            - name: Install build dependencies
+              run: |
+                  sudo apt-get install -y --no-install-recommends libnuma-dev
 
             - name: Build vLLM for CPU
               run: |
