check if cache vLLM build is cached

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
                   enable-cache: true
 
             - name: Build vLLM for CPU
+              if: steps.setup-uv.outputs.cache-hit != 'true'
               run: uv run bash vllm-cpu.sh
 
             - name: Install dependencies
