--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,8 @@ jobs:
               with:
                   python-version-file: ".python-version"
 
-            - name: Install uv
+            - name: Setup uv
+              id: setup-uv
               uses: astral-sh/setup-uv@v6
               with:
                   activate-environment: true
@@ -43,7 +44,8 @@ jobs:
               with:
                   python-version-file: ".python-version"
 
-            - name: Install uv
+            - name: Setup uv
+              id: setup-uv
               uses: astral-sh/setup-uv@v6
               with:
                   activate-environment: true
