fix another typo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
                   python-version-file: ".python-version"
 
             - uses: astral-sh/ruff-action@v3
-              run: |
+            - run: |
                   ruff check .
                   ruff format --check .
 
