--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
             - uses: actions/checkout@v4
             - uses: actions/setup-python@v5
               with:
-                  python-version-file: ".python-version"
+                  python-version: ".python-version"
 
             - uses: astral-sh/ruff-action@v3
             - run: |
@@ -52,7 +52,7 @@ jobs:
             - name: "Set up Python"
               uses: actions/setup-python@v5
               with:
-                  python-version-file: "3.12.11"
+                  python-version: "3.12.11"
 
             - name: Setup uv
               id: setup-uv
