--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,19 @@
 name: CI
 
 on:
+    # Triggers the workflow on push or pull request events but only for the main branch
     push:
         branches: [main]
     pull_request:
         branches: [main]
+        types: [synchronize, opened, reopened, ready_for_review]
+
+    # Allows you to run this workflow manually from the Actions tab
+    workflow_dispatch:
+
+concurrency:
+    group: ${{ github.workflow }}-${{ github.ref }}
+    cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 jobs:
     lint:
