--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
             - uses: actions/checkout@v4
             - uses: actions/setup-python@v5
               with:
-                  python-version: "3.12.11"
+                  python-version-file: ".python-version"
 
             - uses: astral-sh/ruff-action@v3
             - run: |
@@ -41,10 +41,8 @@ jobs:
               uses: actions/cache/restore@v4
               with:
                   path: |
-                      ${{ runner.tool_cache }}/Python/3.12.11
                       /tmp/.uv-cache
                       ./.venv
-                      ~/.cache/huggingface
                       ./.check.md5
                   key: env-cache:main
                   restore-keys: |
@@ -63,7 +61,7 @@ jobs:
             - name: "Set up Python"
               uses: actions/setup-python@v5
               with:
-                  python-version: "3.12.11"
+                  python-version-file: ".python-version"
 
             - name: Setup uv
               id: setup-uv
@@ -103,10 +101,8 @@ jobs:
               uses: actions/cache/save@v4
               with:
                   path: |
-                      ${{ runner.tool_cache }}/Python/3.12.11
                       /tmp/.uv-cache
                       ./.venv
-                      ~/.cache/huggingface
                       ./.check.md5
                   key: env-cache:backup:${{ github.sha }}
 
@@ -122,10 +118,8 @@ jobs:
               uses: actions/cache/save@v4
               with:
                   path: |
-                      ${{ runner.tool_cache }}/Python/3.12.11
                       /tmp/.uv-cache
                       ./.venv
-                      ~/.cache/huggingface
                       ./.check.md5
                   key: env-cache:main
 
