--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ cpu = [] # installed using vllm-cpu.sh
 dev = [
   "debugpy>=1.8.15",
   "pytest>=8.4.1",
+  "pytest-cov>=6.2.1",
   "ruff>=0.12.2",
 ]
 gpu = [
