add cosine-based matching

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ dependencies = [
   "fast-agent-mcp>=0.2.35",
   "matplotlib>=3.10.6",
   "rapidfuzz>=3.14.1",
+  "sentence-transformers>=5.1.0",
 ]
 description = "Add your description here"
 name = "oath-keepers"
