--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
               uses: astral-sh/setup-uv@v6
               with:
                   activate-environment: true
+                  prune-cache: false
 
             - name: Environment cache
               id: env-cache
@@ -75,9 +76,9 @@ jobs:
             - name: Install dependencies if needed
               run: |
                   if ! md5sum --status --check .check.md5; then
-                    uv run bash vllm-cpu.sh
+                    uv run bash cpu.sh
                     uv pip install .[cpu,dev]
-                    md5sum uv.lock pyproject.toml .python-version uv.lock vllm-cpu.sh > .check.md5
+                    md5sum uv.lock pyproject.toml .python-version uv.lock cpu.sh > .check.md5
                   else
                     echo "Requirements unchanged"
                   fi
@@ -137,3 +138,6 @@ jobs:
               run: gh cache delete env-cache:backup:${GITHUB_SHA}
               env:
                   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Minimize uv cache
+              run: uv cache prune --ci --force
