--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ requires-python = ">=3.12"
 version = "0.1.0"
 
 [project.optional-dependencies]
-cpu = [] # installed using vllm-cpu.sh
+cpu = [] # installed using cpu.sh
 dev = [
   "debugpy>=1.8.15",
   "pytest>=8.4.1",
