--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,8 @@ jobs:
                     uv pip install .[cpu,dev]
                     md5sum uv.lock pyproject.toml .python-version uv.lock cpu.sh > .check.md5
                   else
-                    echo "Requirements unchanged"
+                    echo "Requirements unchanged, syncing environment"
+                    uv sync --extra cpu --extra dev
                   fi
 
             - name: Run tests
