Revert "Add uv sync"
This reverts commit f31ee53608ebb8c60edd2cfa519da8ad830c2ec1.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,8 +80,7 @@ jobs:
                     uv pip install .[cpu,dev]
                     md5sum uv.lock pyproject.toml .python-version uv.lock cpu.sh > .check.md5
                   else
-                    echo "Requirements unchanged, syncing environment"
-                    uv sync --extra cpu --extra dev
+                    echo "Requirements unchanged"
                   fi
 
             - name: Run tests
