add UV_INDEX for always installing CPU version of torch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
             contents: read
         env:
             UV_CACHE_DIR: /tmp/.uv-cache
+            UV_INDEX: https://download.pytorch.org/whl/cpu
         steps:
             - uses: actions/checkout@v4
             - name: "Set up Python"
