--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,6 @@ jobs:
             contents: read
         env:
             UV_CACHE_DIR: /tmp/.uv-cache
-            UV_EXTRA_INDEX_URL: https://download.pytorch.org/whl/cpu
         steps:
             - uses: actions/checkout@v4
             - name: "Set up Python"
@@ -78,7 +77,7 @@ jobs:
               run: |
                   if ! md5sum --status --check .check.md5; then
                     uv run bash cpu.sh
-                    uv pip install --index-strategy unsafe-best-match .[cpu,dev]
+                    uv pip install .[cpu,dev]
                     md5sum uv.lock pyproject.toml .python-version uv.lock cpu.sh > .check.md5
                   else
                     echo "Requirements unchanged"
