--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ torchvision = [
   { index = "pytorch-cpu", extra = "cpu" },
   { index = "pytorch-cu128", extra = "gpu" },
 ]
-tourchaudio = [
+torchaudio = [
   { index = "pytorch-cpu", extra = "cpu" },
   { index = "pytorch-cu128", extra = "gpu" },
 ]
