--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ line-length = 100
 target-version = "py311"
 
 [tool.ruff.lint]
-ignore = ["E501"]
+ignore = ["E501", "E402"]
 select = [
   "E", # pycodestyle errors
   "F", # pyflakes
