--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,31 @@ requires-python = ">=3.12"
 version = "0.1.0"
 
 [project.optional-dependencies]
-cpu = [] # installed using cpu.sh
+cpu = [
+  "torch>=2.8.0",
+  "torchaudio>=2.8.0",
+  "torchvision>=0.23.0",
+  # vllm installed with cpu.sh
+]
+gpu = [
+  "torch>=2.8.0",
+  "torchaudio>=2.8.0",
+  "torchvision>=0.23.0",
+  "whisperlivekit>=0.2.12",
+  "vllm>=0.10.0",
+]
 dev = [
   "debugpy>=1.8.15",
   "pytest>=8.4.1",
   "ruff>=0.12.2",
 ]
-gpu = [
-  "whisperlivekit>=0.2.12",
-  "vllm>=0.10.0",
+
+[tool.uv]
+conflicts = [
+  [
+    { extra = "cpu" },
+    { extra = "gpu" },
+  ],
 ]
 
 [tool.ruff]
@@ -39,5 +55,29 @@ select = [
 
 [dependency-groups]
 dev = [
-    "ruff>=0.12.8",
+    "ruff>=0.12.2",
 ]
+
+[tool.uv.sources]
+torch = [
+  { index = "pytorch-cpu", extra = "cpu" },
+  { index = "pytorch-cu128", extra = "gpu" },
+]
+torchvision = [
+  { index = "pytorch-cpu", extra = "cpu" },
+  { index = "pytorch-cu128", extra = "gpu" },
+]
+torchaudio = [
+  { index = "pytorch-cpu", extra = "cpu" },
+  { index = "pytorch-cu128", extra = "gpu" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
+[[tool.uv.index]]
+name = "pytorch-cu128"
+url = "https://download.pytorch.org/whl/cu128"
+explicit = true
