--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ cpu = [
   "torch>=2.8.0",
   "torchaudio>=2.8.0",
   "torchvision>=0.23.0",
+  "whisperlivekit>=0.2.12",
   # vllm installed with cpu.sh
 ]
 gpu = [
