--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,12 @@ dev = [
   "pytest>=8.4.1",
   "ruff>=0.12.2",
 ]
+scripts = [
+  "deeponto>=0.9.3",
+  "matplotlib>=3.10.6",
+  "rapidfuzz>=3.14.1",
+  "sentence-transformers>=5.1.0",
+]
 
 [tool.uv]
 conflicts = [
