--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,38 +9,15 @@ requires-python = ">=3.12"
 version = "0.1.0"
 
 [project.optional-dependencies]
-cpu = [
-  "torch>=2.8.0",
-  "torchaudio>=2.8.0",
-  "torchvision>=0.23.0",
-  "whisperlivekit>=0.2.12",
-  # vllm installed with cpu.sh
-]
-gpu = [
-  "torch>=2.8.0",
-  "torchaudio>=2.8.0",
-  "torchvision>=0.23.0",
-  "whisperlivekit>=0.2.12",
-  "vllm>=0.10.0",
-]
+cpu = [] # installed using cpu.sh
 dev = [
   "debugpy>=1.8.15",
   "pytest>=8.4.1",
   "ruff>=0.12.2",
 ]
-scripts = [
-  "deeponto>=0.9.3",
-  "matplotlib>=3.10.6",
-  "rapidfuzz>=3.14.1",
-  "sentence-transformers>=5.1.0",
-]
-
-[tool.uv]
-conflicts = [
-  [
-    { extra = "cpu" },
-    { extra = "gpu" },
-  ],
+gpu = [
+  "whisperlivekit>=0.2.12",
+  "vllm>=0.10.0",
 ]
 
 [tool.ruff]
@@ -48,7 +25,7 @@ line-length = 100
 target-version = "py311"
 
 [tool.ruff.lint]
-ignore = ["E501", "E402"]
+ignore = ["E501"]
 select = [
   "E", # pycodestyle errors
   "F", # pyflakes
@@ -62,29 +39,5 @@ select = [
 
 [dependency-groups]
 dev = [
-    "ruff>=0.12.2",
+    "ruff>=0.12.8",
 ]
-
-[tool.uv.sources]
-torch = [
-  { index = "pytorch-cpu", extra = "cpu" },
-  { index = "pytorch-cu128", extra = "gpu" },
-]
-torchvision = [
-  { index = "pytorch-cpu", extra = "cpu" },
-  { index = "pytorch-cu128", extra = "gpu" },
-]
-torchaudio = [
-  { index = "pytorch-cpu", extra = "cpu" },
-  { index = "pytorch-cu128", extra = "gpu" },
-]
-
-[[tool.uv.index]]
-name = "pytorch-cpu"
-url = "https://download.pytorch.org/whl/cpu"
-explicit = true
-
-[[tool.uv.index]]
-name = "pytorch-cu128"
-url = "https://download.pytorch.org/whl/cu128"
-explicit = true
