Reapply "Merge pull request #21 from jpcca/palin/add_extractor_agent"
This reverts commit b9a531b9f544f23b0d2fafd52e190bbc3604e6ee.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,3 +138,6 @@ jobs:
               run: gh cache delete env-cache:backup:${GITHUB_SHA}
               env:
                   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Minimize uv cache
+              run: uv cache prune --ci --force
