--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ cpu = [
   "torchvision>=0.23.0",
   "whisperlivekit>=0.2.12",
   # vllm installed with cpu.sh
+  "librosa",
 ]
 gpu = [
   "torch>=2.8.0",
@@ -22,6 +23,7 @@ gpu = [
   "torchvision>=0.23.0",
   "whisperlivekit>=0.2.12",
   "vllm>=0.10.0",
+  "librosa",
 ]
 dev = [
   "debugpy>=1.8.15",
